# moonlight-tv

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  cmake-variants.yaml  package-lock.json  package.json
app/cec/: CMakeLists.txt  cec_key.c  cec_key.h  cec_support.c  cec_support.h  ceccloader.h
app/platform/: CMakeLists.txt
app/platform/common/: app_common.c  i18n_common.c  i18n_gettext.c  logging_stdio.c
app/platform/lgnc/: bus.c  callbacks.c  callbacks.h  events.h  graphics.c  graphics.h  input_manager.c  nkimage.c  path_lgnc.c
app/platform/linux/: evmouse.c  evmouse.h  os_info_linux.c
app/platform/raspi/: app_init.c  app_init.h
app/platform/sdl/: bus.c  events.h  input_manager.c  navkey_sdl.c  navkey_sdl.h  nkimage.c  os_info_generic.c  path_sdl.c  webos_keys.c  webos_keys.h
app/platform/webos/: CMakeLists.txt  SDL_webOS.c  SDL_webOS.h  SDL_webOS_compat.c  app_init.c  app_init.h  app_webos.c  i18n_webos.c  keyboard_webos.c  logging_pmlog.c  lunasynccall.c  lunasynccall.h  mrcu_webos.c  navkey_sdl_webos.c  os_info.c  os_info.h  path_webos.c  pbnjson_compat.c  sprites_webos.c
app/platform/windows/: os_info_windows.c
audio/alsa/: CMakeLists.txt  alsa.c  module.c
audio/ndlaud/: CMakeLists.txt  module.c  ndl_audio.c  ndl_audio_aac.c  ndl_audio_pcm.c
audio/ndlaud-webos5/: CMakeLists.txt  ndl_audio_opus.c  ndl_common.h  ndl_platform.c
audio/pulse/: CMakeLists.txt  module.c  pulse.c  pulseaud.c
core/libgamestream/: CMakeLists.txt
core/libgamestream/libgamestream/: client.h  errors.h  http.h  mkcert.h  sps.h  xml.h
core/libgamestream/src/: CMakeLists.txt  client.c  conf.c  conf.h  crypto.h  http.c  mkcert.c  priv.h  set_error.c  set_error.h  sps.c  xml.c
core/libgamestream/test/: aes.c  challenge.c  crypt.c  sign.c
core/libgamestream/tests/: CMakeLists.txt  challenge.c  hash.c
core/moonlight-common-c/: CMakeLists.txt
core/moonlight-common-c/mbed-openssl-compat/: CMakeLists.txt  impl.c
decoder/: CMakeLists.txt
decoder/dile/: CMakeLists.txt  VideoOutputService.c  VideoOutputService.h  VideoSinkManagerService.c  VideoSinkManagerService.h  dile_audio.c  dile_platform.c  dile_platform.h  dile_video.c  lunasynccall.c  lunasynccall.h  media_services.h  utils.c  utils.h  vdec_services.h  video_samples.h
decoder/dile/current/: services_current.c
decoder/dile/legacy/: AcbService.c  AcbService.h  TVService.h  VideoSinkManagerService.c  VideoSinkManagerService.h  services_legacy.c
decoder/ffmpeg/: CMakeLists.txt  common.h  ffmpeg.c  ffmpeg_platform.c  ffmpeg_renderer.c  ffmpeg_symbols.h  ffmpeg_vdec.c
decoder/ffmpeg-sw/: CMakeLists.txt  ffglrend.c  ffsw_platform.c  ffvid.c  sdl_renderer.h  sdlvid.h
decoder/ffmpeg-sw/shaders/: fragment_source_gl2.glsl  vertex_source_gl2.glsl  vertex_source_gles2.glsl
decoder/ffmpeg/shaders/: fragment_source_gles2.glsl
decoder/gst/: gst_platform.c  gst_video.c
decoder/lgnc/: CMakeLists.txt  lgnc_audio.c  lgnc_platform.c  lgnc_video.c
decoder/mmal/: mmal_common.h  mmalvid.c
decoder/ndl/: CMakeLists.txt  base64.c  base64.h  ndl_audio.c  ndl_audio_direct.c  ndl_audio_opus.c  ndl_audio_pcm.c  ndl_common.h  ndl_platform.c  ndl_video.c  ndl_webos5.c  opus_constants.h  opushead.h
decoder/pi/: CMakeLists.txt  mmalvid.c  pi_common.h  pi_platform.c  pi_presenter.c  pivid.c
decoder/smp/: CMakeLists.txt  smp_audio.c  smp_common.h  smp_platform.c  smp_player.c  smp_video.c
decoder/smp/src/: AVStreamPlayer.cpp  AVStreamPlayer.h  AbsStreamPlayer.cpp  AbsStreamPlayer.h  AudioStreamPlayer.cpp  AudioStreamPlayer.h  DecoderPlatform.cpp  VideoStreamPlayer.cpp  VideoStreamPlayer.h
modules/: CMakeLists.txt
modules/api/: CMakeLists.txt
modules/api/module/: api.h  logging.h
modules/audio/: CMakeLists.txt
modules/audio/alsa/: CMakeLists.txt  alsa.c  module.c
modules/audio/ndlaud/: CMakeLists.txt  module.c  ndl_audio.c
modules/audio/ndlaud-webos5/: CMakeLists.txt  base64.h  ndl_audio_opus.c  ndl_common.h  ndl_platform.c  ndl_webos5.c
modules/audio/pulse/: CMakeLists.txt  module.c  pulse.c
modules/audio/sdlaud/: CMakeLists.txt  ringbuf.c  ringbuf.h  sdl_audio.c
modules/decoder/: CMakeLists.txt
modules/decoder/cgl/: CMakeLists.txt  cgl_audio.c  cgl_logging.c  cgl_platform.c  cgl_video.c
modules/decoder/dile/: CMakeLists.txt  dile_audio.c  dile_platform.c  lunasynccall.h  media_services.h  utils.h
modules/decoder/ffmpeg/: CMakeLists.txt  common.h  ffmpeg.c  ffmpeg_platform.c  ffmpeg_renderer.c  ffmpeg_symbols.h
modules/decoder/lgnc/: CMakeLists.txt  cgl_logging.c  lgnc_audio.c  lgnc_logging.c  lgnc_platform.c  lgnc_video.c
modules/decoder/mmal/: CMakeLists.txt  mmal_common.h  mmal_platform.c  mmal_presenter.c  mmalvid.c
modules/decoder/ndl/: CMakeLists.txt  ndl_audio_pcm.c  ndl_common.h  ndl_platform.c  ndl_video.c
modules/decoder/ndl-webos5/: CMakeLists.txt  base64.c  base64.h  ndl_audio_opus.c  ndl_audio_pcm.c  ndl_common.h  ndl_platform.c  ndl_platform_v2.c  ndl_video.c  ndl_webos5.c
modules/decoder/pi/: pi_platform.c
modules/decoder/smp/: CMakeLists.txt
prebuilt/webos/: CMakeLists.txt
prebuilt/webos/share/: .gitignore
src/app/: CMakeLists.txt  app.c  app.h  app_error.c  app_error.h  app_launch.c  app_launch.h  app_session.c  app_session.h  app_settings.c  app_settings.h  config.h.in  res.h
src/app/backend/: CMakeLists.txt  backend_gs.c  backend_root.c  backend_root.h  input_manager.h  pcmanager.h  types.h
src/app/input/: CMakeLists.txt  app_input.c  app_input.h  evdev_mouse.c  evdev_mouse.h  input_event.c  input_gamepad.c  input_gamepad.h  input_gamepad_mapping.c  input_gamepad_mapping.h
src/app/lvgl/: CMakeLists.txt  lv_conf.h  lv_disp_drv_app.c  lv_disp_drv_app.h  lv_ext_utils.h  lv_sdl_drv_input.h
src/app/platform/: CMakeLists.txt
src/app/res/: CMakeLists.txt  res.c
src/app/stream/: CMakeLists.txt  embed_wrapper.c  (+13 more)
tests/: CMakeLists.txt
tests/app/: CMakeLists.txt  test_app_lifecycle.c  test_settings.c  ui_test_common.h
tests/core/: CMakeLists.txt  platform_crypto_tests.c
tests/fixtures/: hosts_read.ini  settings_read.ini
(+728 files in other folders)
