cmake_minimum_required (VERSION 3.6)

if (TARGET_WEBOS)
    add_subdirectory(smp)
    add_subdirectory(ndl)
    add_subdirectory(lgnc)
elseif (TARGET_LGNC)
    add_subdirectory(lgnc)
elseif (TARGET_RASPI)
    add_subdirectory(pi)
    add_subdirectory(ffmpeg)
else()
    add_subdirectory(ffmpeg)
endif()